@@ -6,5 +6,6 @@ main :: IO ()
 main = doctest 
     [
         "src/Control/Foldl/Transduce.hs",
+        "src/Control/Foldl/Transduce/Textual.hs",
         "src/Control/Foldl/Transduce/Text.hs"
     ]
